# HORAIChain

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: createWallet.html  importWallet.html  index.html  mainWallet.html
static/mini/: get.html  sent.html  wait.html
