[package]
name = "horaichain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Database (Supabase = PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (кошельки)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
bip39 = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Env & utils
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }  # для keep-alive пинга и AdsGram

# Telegram
teloxide = { version = "0.12", features = ["macros"] }

# Hashing (для блоков)
sha2 = "0.10"