[package]
name = "horaichain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
tower-http = { version = "0.5.1", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"