[package]
name = "horaichain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
tower-http = { version = "0.5.1", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
bip39 = "2.0.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }
